css/style.css
body {
    display: flex;
    flex-direction: column;
    background-color: #1F2937;
    font-family: Roboto, sans-serif;
    box-sizing: border-box;
    margin: 0;
}

.header {
    display: flex;
    justify-content: space-around;
    align-items: flex-start;
    background-color: #1F2937;
    color: white;
    font-weight: 800;
    font-size: 24px;
    margin-top: 8px;
}

a {
    text-decoration: none;
    color: white;
    font-weight: 200;
    font-size: 18px;

}

ul {
    list-style-type: none;
    display: flex;
    flex-wrap: wrap;
    padding: 0;
    margin: 0;
    gap: 16px;
}

.container1 {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    color: white;
    margin-top: 120px;
    margin-bottom: 120px;
}

.awesome {
    max-width: 500px;
}

img.awesome {
    height: 250px;
    width: 500px;
    margin-left: 30px;
}

h1.awesome {
    font-size: 48px;
    font-weight: 900;
    padding: 0;
    margin: 0;
}

p.awesome {
    font-size: 18px; 
    font-weight: 200;
    display: flex;
    flex-wrap: wrap;
}

button.awesome {
    background-color: #3882F6;
    color: white;
    padding: 6px 20px;
    border-radius: 6px;
    border: none;
}

.container2 {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: white;
    padding-top: 30px;
    padding-bottom: 60px;
}

h1.random {
    font-size: 36px;
    font-weight: 900;
    padding-bottom: 30px;
}

img.random {
    width: 175px;
    height: 175px;
    border: solid 2px #3882F6;
    border-radius: 12px;
}

p.random {
    font-size: 18px;
    display: flex;
    flex-wrap: wrap;
    max-width: 175px;
    text-align: center;
}

.small-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 36px;
    padding: 0;
    margin: 0;
}

.container3 {
    background-color: #E5E7EB;
    justify-content: center;
    display: flex;
    justify-content: center;
    align-items: center;
}

.small-container2 {
    display: flex;
    flex-flow: column wrap;
    max-width: 800px;
    padding-top: 100px;
    padding-bottom: 100px;
}

p.quote {
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
    padding: 0;
    margin: 0;
}

p.attribute {
    font-size: 24px;
    font-weight: 700;
    align-self: flex-end;
    padding: 0;
    margin: 0;
}

.container4 {
    background-color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 30px;
}

.cta-container {
    background-color: #3882F6;
    color: white;
    display: flex;
    justify-content: space-around;
    min-width: 1000px;
    margin: 50px 80px;
    gap: 0;
    border-radius: 8px;
}

.cta-button {
    align-self: center;
}

h1.cta {
    font-size: 24px;
    margin: 36px 0 0 0;
}

p.cta {
    font-size: 18px;
    margin: 0 0 36px 0; 
}

button.cta {
    background-color: #3882F6;
    border: white 2px solid;
    color: white;
    padding: 8px 24px;
    border-radius: 6px;
}

.footer {
    background-color: #1F2937;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 32px;
    font-size: 18px;
}

